From Rasp Pi try 1

--- a/Lab_1-Copy1.ipynb
+++ b/Lab_1-Copy1.ipynb
@@ -497,7 +497,9 @@
    "id": "20cdfbe8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Need To Avoid Aliasing over 2"
+   ]
   }
  ],
  "metadata": {
