--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -371,7 +371,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "bd1430ac",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -413,7 +415,8 @@
     }
    ],
    "source": [
-    "print(data2)"
+    "print(data2)\n",
+    "#testforxavi"
    ]
   },
   {
@@ -657,9 +660,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ugradio",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -671,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
