pushing so that I can do an updated pull

--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -10,10 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3f108926",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ugradio'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#packages\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mugradio\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ugradio'"
+     ]
+    }
+   ],
    "source": [
     "#packages\n",
     "import ugradio\n",
@@ -24,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6cbcd349",
    "metadata": {},
    "outputs": [],
@@ -34,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f6645ed2",
    "metadata": {},
    "outputs": [],
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2c6ab3c1",
    "metadata": {},
    "outputs": [],
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a082dd6a",
    "metadata": {},
    "outputs": [
@@ -86,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NpzFile 'test25.npz' with keys: arr_0\n"
+      "<numpy.lib.npyio.NpzFile object at 0x0000024F7C4B50D0>\n"
      ]
     }
    ],
@@ -106,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d588a140",
    "metadata": {},
    "outputs": [
@@ -115,10 +127,10 @@
      "evalue": "name 'array' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m data[\u001b[33m'\u001b[39m\u001b[33marr_0\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43marray\u001b[49m(\u001b[33m'\u001b[39m\u001b[33mD:\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[33mLab_1_Work\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[33mconstant.py\u001b[39m\u001b[33m'\u001b[39m, dtype=\u001b[33m'\u001b[39m\u001b[33m<U17\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      3\u001b[39m data[\u001b[33m'\u001b[39m\u001b[33marr_0\u001b[39m\u001b[33m'\u001b[39m].item()\n",
-      "\u001b[31mNameError\u001b[39m: name 'array' is not defined"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124marr_0\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m array(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mLab_1_Work\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mconstant.py\u001b[39m\u001b[38;5;124m'\u001b[39m, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m<U17\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124marr_0\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mitem()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'array' is not defined"
      ]
     }
    ],
@@ -130,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "265cc785",
    "metadata": {},
    "outputs": [],
@@ -140,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2892c499",
    "metadata": {},
    "outputs": [
@@ -150,7 +162,7 @@
        "numpy.lib.npyio.NpzFile"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,17 +173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d742d7e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "KeysView(NpzFile 'test25.npz' with keys: arr_0)"
+       "KeysView(<numpy.lib.npyio.NpzFile object at 0x0000024F7C4B50D0>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a9eed347",
    "metadata": {},
    "outputs": [
@@ -192,7 +204,7 @@
        "['arr_0']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "d84cfd3b",
    "metadata": {},
    "outputs": [],
@@ -657,9 +669,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ugradio",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -671,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
