added clean Lab 1 working notebook

--- a/Lab_1_working.ipynb
+++ b/Lab_1_working.ipynb
@@ -19,7 +19,7 @@
     "import ugradio\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import rtlsdr"
+    "#import rtlsdr #don't need anymore. this is the OG package that makes it work correctly. we don't want that. "
    ]
   },
   {
