--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -400,7 +400,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "ea6be2e4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -647,7 +649,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "99067aca",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -916,7 +920,7 @@
     }
    ],
    "source": [
-    "#Power \n",
+    "#Power Spread Function\n",
     "\n",
     "#just the squared abs val of voltage spectra\n",
     "\n",
@@ -937,9 +941,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ugradio",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -951,7 +955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
