pushing after aliasing

--- a/Lab_1_working.ipynb
+++ b/Lab_1_working.ipynb
@@ -53,11 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "86723fd5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import ugradio.sdr"
+   ]
   },
   {
    "cell_type": "markdown",
