--- a/StraightThrough/StraightThroughNotebook.ipynb
+++ b/StraightThrough/StraightThroughNotebook.ipynb
@@ -773,9 +773,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ugradio",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -787,7 +787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
